# lore_competition_bot

./: CMakeLists.txt  README.md  package.xml
launch/: laun.launch  move_robot.launch  robot.launch
src/lore_competition_bot/: CMakeLists.txt  gitFilesTranscript.txt  package.xml
src/lore_competition_bot/launch/: laun.launch  move_robot.launch  robot.launch
src/lore_competition_bot/node/: move_robot.py
src/lore_competition_bot/urdf/: macros.xacro
urdf/: robot.xacro
