<?xml version="1.0"?>
<package format="3">
  <name>lore_competition_bot</name>
  <version>0.0.0</version>
  <description>The lore_competition_bot package</description>

  <maintainer email="griffin@todo.todo">griffin</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>